$Id$

Version 0.7 (...)

- Added find_command() and path_elements() functions to grizzled.os.
- Documentation format changed from default Epydoc to reStructuredText.
- Fixed bug in grizzled.db.add_driver() function that prevented a driver
  from being added programmatically.
- Added class_for_name() function to grizzled.system module.
- grizzled.config now uses grizzled.collections.OrderedDict
- In grizzled.config, Configuration.sections() is now a property.

---------------------------------------------------------------------------
Version 0.6 (30 May, 2008)

- Removed deprecated methods.
- Removed deprecated optparse module.
- Added MySQL-specific logic for table metadata to grizzled.db
- Added PostgreSQL-specific logic for table metadata to grizzled.db
- Added ability to retrieve list of database tables to grizzled.db.
- Added grizzled.io.filelock.locked_file() function, for use with the
  "with" statement.

---------------------------------------------------------------------------

Version 0.5 (28 May, 2008)

- Added grizzled.sys module, with python_version(), python_version_string(),
  split_python_version() and ensure_version() functions.
- Added grizzled.file.universal_path() and grizzled.file.native_path().
  A universal path always uses a '/' as the file separator, no matter what
  the underlying operating system uses. A native path uses the underlying
  operating system's path separator. These two functions convert between the
  two notations.
- Fixed bug in grizzled.file.eglob() stemming from camel case conversion.
- Added grizzled.os.file_separator() function.
- Changed grizzled.os.get_path_separator() to grizzled.os.path_separator().

---------------------------------------------------------------------------

Version 0.4 (20 May, 2008)

- Converted public functions, methods, parameters and variables that use
  camel case names to names that are more consistent with standard Python