@@ -18,7 +18,7 @@ proj.directory-list = [{'dirloc': loc('.'),
                         'watch_for_changes': 1}]
 proj.file-type = 'normal'
 [user attributes]
-cache.last-mime-type = {loc('unknown:<untitled> #447'): 'text/plain'}
+cache.last-mime-type = {loc('unknown:<untitled> #53'): 'text/plain'}
 debug.err-values = {None: {}}
 edit.file-encoding = {loc('test/io/TestPushback.py'): 'UTF-8'}
 guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
@@ -30,7 +30,7 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                  'current_pages': [1,
                                    5],
                  'notebook_display': 'normal',
-                 'notebook_percent': 0.25,
+                 'notebook_percent': 0.19073783359497642,
                  'override_title': None,
                  'pagelist': [('debug-breakpoints',
                                'tall',
@@ -68,8 +68,9 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                                {'tree-state': {'file-sort-method': 'by name',
         'list-files-first': 0,
         'tree-states': {'deep': {'column-widths': [1.0],
-                                 'expanded-nodes': [],
-                                 'selected-nodes': [],
+                                 'expanded-nodes': [(3,)],
+                                 'selected-nodes': [(3,
+        10)],
                                  'top-node': (0,)}},
         'tree-style': 'deep'}}),
                               ('python-shell',
@@ -529,35 +530,7 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         'selection_end': 1093,
         'selection_start': 1093}},
          'has-focus': False},
-        {'bookmarks': ([(loc('grizzled/db/__init__.py'),
-                         {'attrib-starts': [('DB',
-        475),
-        ('DB.Time',
-         600)],
-                          'first-line': 582,
-                          'sel-line': 611,
-                          'sel-line-start': 18882,
-                          'selection_end': 18882,
-                          'selection_start': 18882},
-                         1212200938.8535061),
-                        (loc('grizzled/db/__init__.py'),
-                         {'attrib-starts': [],
-                          'first-line': 15,
-                          'sel-line': 43,
-                          'sel-line-start': 1600,
-                          'selection_end': 1602,
-                          'selection_start': 1602},
-                         1212200940.8193879),
-                        (loc('grizzled/collections.py'),
-                         {'attrib-starts': [('OrderedDict',
-        21)],
-                          'first-line': 0,
-                          'sel-line': 24,
-                          'sel-line-start': 848,
-                          'selection_end': 867,
-                          'selection_start': 867},
-                         1212203986.033201),
-                        (loc('grizzled/config.py'),
+        {'bookmarks': ([(loc('grizzled/config.py'),
                          {'attrib-starts': [],
                           'first-line': 0,
                           'sel-line': 0,
@@ -696,25 +669,51 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                           'selection_end': 530,
                           'selection_start': 530},
                          1212238995.3396521),
-                        [loc('grizzled/config.py'),
+                        (loc('grizzled/config.py'),
                          {'attrib-starts': [('Configuration',
         252),
-        ('Configuration.readfp',
-         414)],
-                          'first-line': 384,
-                          'sel-line': 424,
-                          'sel-line-start': 14277,
-                          'selection_end': 14334,
-                          'selection_start': 14334},
-                         1212242641.65639]],
+        ('Configuration.__init__',
+         257)],
+                          'first-line': 261,
+                          'sel-line': 264,
+                          'sel-line-start': 8536,
+                          'selection_end': 9315,
+                          'selection_start': 8536},
+                         1212242641.65639),
+                        (loc('grizzled/os.py'),
+                         {'attrib-starts': [('find_command',
+        153)],
+                          'first-line': 118,
+                          'sel-line': 172,
+                          'sel-line-start': 4852,
+                          'selection_end': 4882,
+                          'selection_start': 4878},
+                         1212372853.779845),
+                        (loc('grizzled/os.py'),
+                         {'attrib-starts': [('find_command',
+        154)],
+                          'first-line': 157,
+                          'sel-line': 188,
+                          'sel-line-start': 5275,
+                          'selection_end': 5275,
+                          'selection_start': 5275},
+                         1212373169.212559),
+                        [loc('CHANGELOG'),
+                         {'attrib-starts': [],
+                          'first-line': 0,
+                          'sel-line': 9,
+                          'sel-line-start': 370,
+                          'selection_end': 424,
+                          'selection_start': 424},
+                         1212373628.655849]],
                        19),
-         'current-loc': loc('grizzled/config.py'),
+         'current-loc': loc('CHANGELOG'),
          'editor-states': {loc('CHANGELOG'): {'attrib-starts': [],
         'first-line': 0,
-        'sel-line': 10,
-        'sel-line-start': 365,
-        'selection_end': 424,
-        'selection_start': 424},
+        'sel-line': 4,
+        'sel-line-start': 67,
+        'selection_end': 135,
+        'selection_start': 135},
                            loc('grizzled/__init__.py'): {'attrib-starts': [],
         'first-line': 0,
         'sel-line': 3,
@@ -800,12 +799,14 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         'sel-line-start': 3579,
         'selection_end': 3611,
         'selection_start': 3611},
-                           loc('grizzled/os.py'): {'attrib-starts': [],
-        'first-line': 0,
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
+                           loc('grizzled/os.py'): {'attrib-starts': [('find_'\
+        'command',
+        154)],
+        'first-line': 157,
+        'sel-line': 188,
+        'sel-line-start': 5275,
+        'selection_end': 5275,
+        'selection_start': 5275},
                            loc('grizzled/system.py'): {'attrib-starts': [],
         'first-line': 0,
         'sel-line': 0,
@@ -824,8 +825,7 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         'selection_end': 840,
         'selection_start': 840}},
          'has-focus': False}),
-                               'open_files': [u'CHANGELOG',
-        u'grizzled/__init__.py',
+                               'open_files': [u'grizzled/__init__.py',
         u'grizzled/cmdline.py',
         u'grizzled/collections.py',
         u'grizzled/db/__init__.py',
@@ -837,11 +837,12 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         u'grizzled/io/__init__.py',
         u'grizzled/io/filelock.py',
         u'grizzled/net.py',
-        u'grizzled/os.py',
         u'grizzled/system.py',
         u'grizzled/text/__init__.py',
         u'test/io/TestPushback.py',
-        u'grizzled/config.py']},
+        u'grizzled/config.py',
+        u'grizzled/os.py',
+        u'CHANGELOG']},
         'split_percents': {0: 0.5},
         'splits': 1,
         'tab_location': 'top',
@@ -878,7 +879,9 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                           378,
                           1102,
                           189)}]}
-guimgr.recent-documents = [loc('grizzled/system.py'),
+guimgr.recent-documents = [loc('CHANGELOG'),
+                           loc('grizzled/os.py'),
+                           loc('grizzled/system.py'),
                            loc('grizzled/config.py')]
 guimgr.visual-state = {loc('CHANGELOG'): {'attrib-starts': [],
         'first-line': 0,
@@ -887,6 +890,12 @@ guimgr.visual-state = {loc('CHANGELOG'): {'attrib-starts': [],
         'selection_end': 0,
         'selection_start': 0},
                        loc('grizzled/collections.py'): {'attrib-starts': [],
+        'first-line': 0,
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('grizzled/config.py'): {'attrib-starts': [],
         'first-line': 0,
         'sel-line': 0,
         'sel-line-start': 0,
@@ -950,264 +959,271 @@ guimgr.visual-state = {loc('CHANGELOG'): {'attrib-starts': [],
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #446'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #52'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #448'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #77'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #449'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #78'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #450'): {'attrib-starts': [],
-        'first-line': 0,
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 60,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #451'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #79'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #452'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #80'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #453'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #81'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #454'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #82'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #455'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #83'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #456'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #84'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #457'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #85'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #458'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #86'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #459'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #460'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #461'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #462'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #463'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #464'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #465'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #466'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #467'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #468'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #469'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #470'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #471'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #472'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #473'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #474'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #475'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #476'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #477'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #478'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #479'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #480'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #87'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 4,
         'selection_start': 4},
-                       loc('unknown:<untitled> #481'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #88'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #482'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #89'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #483'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #90'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 3,
         'sel-line-start': 180,
         'selection_end': 184,
-        'selection_start': 184}}
+        'selection_start': 184},
+                       loc('unknown:<untitled> #54'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #55'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #56'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #57'): {'attrib-starts': [],
+        'first-line': 0,
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 60,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #58'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #59'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #60'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #61'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #62'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #63'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #64'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #65'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #66'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #67'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #68'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #69'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #70'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #71'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #72'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #73'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #74'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #75'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #76'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0}}
 proj.env-vars = {None: ('default',
                         [''])}
 proj.revision-control = 1
